--- a/March_PreOnBoarding/Base.lproj/Main.storyboard
+++ b/March_PreOnBoarding/Base.lproj/Main.storyboard
@@ -20,6 +20,9 @@
                                 <rect key="frame" x="20" y="778.66666666666663" width="353" height="34.333333333333371"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                <connections>
+                                    <action selector="allLoadBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SK6-8V-jAs"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="BfZ-RZ-ncW">
                                 <rect key="frame" x="0.0" y="59" width="393" height="714.66666666666663"/>
